--- a/shell/app/modules/project/common/components/issue/issue-activities.scss
+++ b/shell/app/modules/project/common/components/issue/issue-activities.scss
@@ -25,6 +25,7 @@
   .issue-activity-content {
     img {
       max-height: 200px;
+      border: 1px solid $color-default-1;
     }
     .fixed img {
       max-height: unset;
