--- a/shell/app/modules/project/common/components/issue/comment-box.scss
+++ b/shell/app/modules/project/common/components/issue/comment-box.scss
@@ -27,3 +27,10 @@
     border-left: 1px solid rgba(48, 38, 71, 0.2);
   }
 }
+
+.issue-comment-box {
+  transition: transform 0.3s ease;
+  &.slide-down {
+    transform: translateY(64px);
+  }
+}
