--- a/shell/app/modules/project/common/components/issue/issue-drawer.scss
+++ b/shell/app/modules/project/common/components/issue/issue-drawer.scss
@@ -1,4 +1,7 @@
 .issue-drawer-modal {
+  .ant-modal {
+    padding-bottom: 0;
+  }
   .ant-modal-body {
     padding: 0;
     height: calc(100vh - 80px);
@@ -6,7 +9,7 @@
   }
 
   .ant-affix {
-    left: calc(50vw + 600px - 120px + 16px);
+    left: calc((100% - 80px) * 0.88 + 56px);
     width: 100px !important;
     .ant-anchor-ink:before {
       width: 1px;
