feat(dop): update issue detail v3.1 (#3118)
* feat: update issue detail modal width

* feat: update issue field margin

* refactor: support multiple level esc stack

* fix: not fetch issue reference

* feat: add border to image in markdown content

* fix: style

* fix: enlarge preview image

* feat: update issue detail style

* feat: update related mr and test case list style

* feat: update  icon

--- a/shell/app/modules/project/common/components/issue/issue-drawer.scss
+++ b/shell/app/modules/project/common/components/issue/issue-drawer.scss
@@ -1,12 +1,15 @@
 .issue-drawer-modal {
+  .ant-modal {
+    padding-bottom: 0;
+  }
   .ant-modal-body {
     padding: 0;
-    height: calc(100vh - 160px);
+    height: calc(100vh - 80px);
     overflow: hidden;
   }
 
   .ant-affix {
-    left: calc(50vw + 480px - 120px + 16px);
+    left: calc((100% - 80px) * 0.88 + 56px);
     width: 100px !important;
     .ant-anchor-ink:before {
       width: 1px;
