fix(dop): dop table optimization

--- a/shell/app/common/components/configurable-filter/index.scss
+++ b/shell/app/common/components/configurable-filter/index.scss
@@ -259,4 +259,9 @@
       color: $color-default-3;
     }
   }
+
+  .load-more-selector {
+    background-color: $color-default-06;
+    border: none;
+  }
 }
