--- a/shell/app/modules/apiManagePlatform/pages/api-market/components/export-record.scss
+++ b/shell/app/modules/apiManagePlatform/pages/api-market/components/export-record.scss
@@ -9,6 +9,12 @@
     }
   }
 
+  .ant-modal-body {
+    padding: 16px;
+    max-height: 80vh;
+    display: flex;
+  }
+
   .ant-modal-header {
     padding: 12px 16px;
     background-color: $color-default-02;
