--- a/shell/app/modules/msp/env-overview/topology/pages/topology/component/nodes/index.scss
+++ b/shell/app/modules/msp/env-overview/topology/pages/topology/component/nodes/index.scss
@@ -44,14 +44,13 @@ $exhale-shadow: 0 0 20px rgba($color-error, 0.9);
 
   .service-node-tips {
     position: absolute;
-    height: 20px;
-    width: 20px;
-    right: -6px;
-    top: -6px;
-    z-index: 100;
-    transform: translateX(50%) translateY(-50%);
+    height: 96px;
+    width: 96px;
+    left: -16px;
+    bottom: -16px;
 
     .info-icon {
+      float: right;
       cursor: pointer;
       display: none;
     }
