feat(dop): project pipeline guides list add delete button

--- a/shell/app/modules/project/pages/pipelines/index.scss
+++ b/shell/app/modules/project/pages/pipelines/index.scss
@@ -34,4 +34,20 @@
 div.alert-blue {
   border-color: $blue;
   background-color: rgba($blue, 0.1);
+
+  .alert-list-item {
+    .remove-btn {
+      display: none;
+      color: $color-default;
+      cursor: pointer;
+
+      &:hover {
+        color: $red;
+      }
+    }
+
+    &:hover .remove-btn {
+      display: block;
+    }
+  }
 }
