--- a/shell/app/styles/_color.scss
+++ b/shell/app/styles/_color.scss
@@ -119,6 +119,7 @@ $color-disabled: $color-dark-3;
 $color-disabled-bg: rgba($black, 0.06);
 $color-click-bg: rgba($color-default, 0.2);
 $color-light-bg: $whitesmoke;
+$color-light-bg-04: #f6f6f7;
 
 // Color text
 $color-text: $color-default-8 !default;
