--- a/shell/app/modules/project/pages/release/components/form.scss
+++ b/shell/app/modules/project/pages/release/components/form.scss
@@ -20,6 +20,15 @@
     border: none;
   }
 
+  .ant-select {
+    width: 50%;
+  }
+
+  .ant-select:not(.ant-select-customize-input) .ant-select-selector {
+    background-color: $color-default-04 !important;
+    border: none;
+  }
+
   .ant-tabs {
     display: flex;
 
