feat: move init requests to node to optimize first page paint time

--- a/shell/app/views/index.ejs
+++ b/shell/app/views/index.ejs
@@ -29,33 +29,8 @@
       <div class="e-loading-point e-loading-rb"></div>
     </div>
   </div>
+  <!-- $data -->
 
-  <script id='init-script'>
-    fetch('/api/-/users/me').then(userRes => {
-      if (userRes.status >= 500) {
-        document.querySelector('.main-holder').innerText = "服务暂时不可用";
-        return;
-      }
-      if (userRes.status === 401) {
-        fetch('/api/-/openapi/login').then((loginRes) => {
-          loginRes.json().then(data => {
-            if (data && data.url) {
-              window.location.href = data.url;
-            }
-          });
-        });
-      } else {
-        userRes.json().then(result => {
-          const userData = result && result.data || {};
-          if (typeof window.userCb === 'function') {
-            window.userCb(userData);
-          } else {
-            window._userData = userData;
-          }
-        })
-      }
-    })
-  </script>
   <!-- dice -->
   <script src="//at.alicdn.com/t/font_500774_kzpe8fzg3t.js" async></script>
   <!-- dice iconpark -->
