--- a/shell/app/common/components/tags-row/index.scss
+++ b/shell/app/common/components/tags-row/index.scss
@@ -40,7 +40,7 @@
     margin-bottom: 4px;
     padding-right: 6px;
     padding-left: 6px;
-    color: $white;
+    color: $color-default-4;
     font-size: 14px;
     line-height: 28px;
     border: 1px solid transparent;
