fix: code optimization

--- a/shell/app/common/components/tags/index.scss
+++ b/shell/app/common/components/tags/index.scss
@@ -43,7 +43,7 @@
     margin-bottom: 4px;
     padding-right: 6px;
     padding-left: 6px;
-    color: $color-default-4;
+    color: $gray;
     font-size: 14px;
     line-height: 28px;
     border-radius: $radius;
