--- a/shell/app/modules/application/common/components/dice-service-node.scss
+++ b/shell/app/modules/application/common/components/dice-service-node.scss
@@ -19,3 +19,20 @@
 .dice-service-detail-column:nth-child(2n) {
   margin-left: 8px;
 }
+
+.edit-service-label {
+  display: inline-block;
+  color: $color-dark-4;
+}
+
+.edit-service-label-icon {
+  margin-left: 8px;
+  color: $color-dark-4;
+  cursor: pointer;
+}
+
+.edit-service-container {
+  .ant-form-item-label label {
+    color: $color-dark-8;
+  }
+}
