feat(dop): create deploy add tags filter

--- a/shell/app/modules/project/pages/deploy/add-deploy/add-release.scss
+++ b/shell/app/modules/project/pages/deploy/add-deploy/add-release.scss
@@ -1,5 +1,14 @@
 .project-deploy-add-release {
   height: 70vh;
+
+  .ant-dropdown-menu-item {
+    cursor: auto;
+
+    &:hover {
+      background: transparent;
+    }
+  }
+
   .load-more-selector {
     .results {
       padding: 0;
